[package]
name = "biome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
env_logger = "0.10.0"
midi-control = "0.2.2"
midir = "0.9.1"
monome-rs = "1.1.3"
thiserror = "1.0.40"
web-audio-api = "0.28.0"
